--- a/goodbye-quora-embed-button/goodbye.css
+++ b/goodbye-quora-embed-button/goodbye.css
@@ -2,3 +2,9 @@
 .quote-hover-menu {
     display: none !important;
 }
+.hover_menu {
+	display: none !important;
+}
+.quote_hover_menu {
+	display: none !important;
+}
